# modbus_hub-

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  build_macos.sh  build_windows.bat  build_windows.ps1  installer.iss  make_linux.sh  modbus_master.ini  modbus_master.pro
.github/workflows/: build.yml
build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake  devices.ini  macos_style_dark.qss  modbus_master
build_linux/.qt/: QtDeploySupport.cmake
build_linux/logs/: modbus_data_20260612_115330.csv
build_linux/modbus_master_autogen/: deps  moc_predefs.h
build_linux/modbus_master_autogen/DOHTCAYJZN/: qrc_resources.cpp
build_linux/modbus_master_autogen/IYECXEJARV/: moc_alarmdialog.cpp  moc_alarmdialog.cpp.d  moc_devicedialog.cpp  moc_devicedialog.cpp.d
build_linux/modbus_master_autogen/JCA2YNWUYB/: moc_pollinggraphwidget.cpp  moc_pollinggraphwidget.cpp.d
build_linux/modbus_master_autogen/YPKJ5OE7LN/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build_qt_win/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  devices.ini  macos_style.qss
build_qt_win/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_qt_win/modbus_master_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_qt_win/modbus_master_autogen/DOHTCAYJZN/: qrc_resources.cpp
build_qt_win/modbus_master_autogen/IYECXEJARV/: moc_alarmdialog.cpp  moc_alarmdialog.cpp.d  moc_devicedialog.cpp  moc_devicedialog.cpp.d
build_qt_win/modbus_master_autogen/JCA2YNWUYB/: moc_pollinggraphwidget.cpp  moc_pollinggraphwidget.cpp.d
build_qt_win/modbus_master_autogen/YPKJ5OE7LN/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
src/backend/include/: alarm_manager.h  app_logger.h  config.h  data_logger.h  device_manager.h  modbus.h  packet_monitor.h  platform.h  smtp_client.h
src/backend/src/: alarm_manager.c  app_logger.c  backend_stubs.c  config.c  data_logger.c  device_manager.c  modbus.c  packet_monitor.c  platform.c  smtp_client.c
src/ui/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_slots.cpp
src/ui/dialogs/: alarmdialog.cpp  alarmdialog.h  devicedialog.cpp  devicedialog.h
src/ui/resources/: app_logo.rc  macos_style.qss  manual.html  resources.qrc
src/ui/widgets/: pollinggraphwidget.h
